--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "axios": "^1.9.0",
+    "dom": "^0.0.3",
+    "framer-motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-toastify": "^11.0.5"
+    "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
+    "router": "^2.2.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
