--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.9.0",
     "dom": "^0.0.3",
     "framer-motion": "^12.16.0",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
     "router": "^2.2.0",
