resume upload and extract data then folder restructure

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_PERPLEXITY_API_TOKEN=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
-VITE_PORT=5000
+VITE_PORT=5080
+VITE_FILE_APP=http://localhost:3000
