--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_PORT=5080
-VITE_FILE_APP=http://localhost:3000
+# VITE_FILE_APP=http://localhost:3000
+VITE_FILE_APP=https://aiworkisyapi.workisy.com
