--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-VITE_PORT=5080
-# VITE_API_BASE_URL=https://aiworkisyapi.workisy.com
-VITE_API_BASE_URL=http://localhost:3000
+VITE_PORT=5000
+VITE_API_BASE_URL=https://aiworkisyapi.workisy.com
