--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
-    "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.9.0",
     "dom": "^0.0.3",
     "framer-motion": "^12.16.0",
@@ -24,7 +21,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-otp-input": "^3.1.1",
-    "react-pdf": "^9.2.1",
+    "react-pdf": "5.7.1",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
     "router": "^2.2.0",
