--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-otp-input": "^3.1.1",
-    "react-pdf": "5.7.1",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
     "router": "^2.2.0",
