--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-otp-input": "^3.1.1",
-    "react-pdf": "^9.2.1",
+    "react-pdf": "10.0.1",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
     "router": "^2.2.0",
